# gridfinity-builds

./: .gitignore  README.rst  pyproject.toml  tasks.py
custom/: __init__.py  constants.py  cq_containers.py  eye_loupe.py  rules_150_bulk.py  wiha.py
custom/mueller/: crocodile_clips.py
src/gridfinity_builds/: constants.py  cq_containers.py  empire_rule_stop.py  eye_loupe.py  helpers.py  rules_150_bulk.py  wiha.py
src/gridfinity_builds/empire/: __init__.py  rule_stop_emssrs.py  tasks.py
src/gridfinity_builds/europlan/: tasks.py
src/gridfinity_builds/generic/: __init__.py  eye_loupe.py  rules_150_bulk.py  rules_300_bulk.py  tasks.py
src/gridfinity_builds/gridfinity/: __init__.py  tasks.py
src/gridfinity_builds/mueller/: __init__.py  alligator_clip_bu_27_259.py  crocodile_clips.py  tasks.py
src/gridfinity_builds/wiha/: __init__.py  magnetizer_40010.py  tasks.py
