[tool.poetry]
name = "gridfinity-builds"
version = "0.1.0"
description = "Gridfinity builds"
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "MIT"
readme = "README.rst"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

cadquery = "2.5.2"
cadquery-ocp = "7.7.2"

cqgridfinity = "^0.5.7"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
